--- a/project/Skateshop/Skateshop/Views/Home/Index.cshtml
+++ b/project/Skateshop/Skateshop/Views/Home/Index.cshtml
@@ -4,5 +4,6 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>Welcome to Ronnie's Skateshop! This is the best skateshop of the world.</p>
+    <img src="img/skateshop_logo.png" width="80%"/>
 </div>
