--- a/project/Skateshop/Skateshop/Views/Products/Index.cshtml
+++ b/project/Skateshop/Skateshop/Views/Products/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Products</h1>
+<h1>All Products</h1>
 
 <div class="row">
     @foreach (var item in Model)
